- remove tenant references - remove member references - fixes to support single tenancy model

--- a/config/locales/views/appointments/fr.yml
+++ b/config/locales/views/appointments/fr.yml
@@ -1,35 +1,40 @@
 fr:
   appointments:
-    title: "Mes rendez-vous du %{date}"
-    new_appointment: "Nouveau rendez-vous"
-    calculate_distance_time: "Calculer la distance et le temps"
-    today_you_drove: "Aujourd'hui, vous avez conduit"
-    driving_distance: "%{driving_distance} km"
-    driving_duration: "%{driving_duration} minutes"
-    distance_and_duration: "%{distance} km & %{duration} minutes"
-    click_to_calculate_distance: "Cliquez pour calculer la distance et le temps"
-    new_appointment: "Vous créez un nouveau rendez-vous"
-    select_patient: "Sélectionnez le patient"
-    start_time: "Heure de début"
-    end_time: "Heure de fin"
-    submit: "Valider et enregistrer"
-    back_to_appointments: "Retour aux rendez-vous"
-    back_to_appointments: "Retour aux rendez-vous"
-    delete_appointment: "Supprimer ce rendez-vous"
-    delete: "Supprimer"
-    deleted_patient: "Patient supprimé"
-    arrived_at: "Arrivé à %{time}"
-    left_at: "Départ à %{time}"
-    title: "Tous mes rendez-vous"
-    today: "Aujourd'hui"
-    start_date: "Date de début"
-    end_date: "Date de fin"
-    submit: "Soumettre"
-    distance: "Distance"
-    appointments: "Rendez-vous"
-    during_this_period: "Pendant cette période, tu as parcouru"
-    distance_and_duration: "%{distance} km & %{duration} minutes"
-    for_appointments: "pour %{count} rendez-vous"
-    appointments_amount: "Total : %{count} rendez-vous"
-    deleted_patient: "Patient supprimé"
-    minutes: "minutes"
+    daily_index:
+      title: "Mes rendez-vous du %{date}"
+      new_appointment: "Nouveau rendez-vous"
+      calculate_distance_time: "Calculer la distance et le temps"
+      today_you_drove: "Aujourd'hui, vous avez conduit"
+      driving_distance: "%{driving_distance} km"
+      driving_duration: "%{driving_duration} minutes"
+      distance_and_duration: "%{distance} km & %{duration} minutes"
+      click_to_calculate_distance: "Cliquez pour calculer la distance et le temps"
+    new:
+      new_appointment: "Vous créez un nouveau rendez-vous"
+      select_patient: "Sélectionnez le patient"
+      start_time: "Heure de début"
+      end_time: "Heure de fin"
+      submit: "Valider et enregistrer"
+      back_to_appointments: "Retour aux rendez-vous"
+    appointment:
+      arrived_at: "Arrivé à %{time}"
+      left_at: "Départ à %{time}"
+    show:
+      delete_appointment: "Supprimer ce rendez-vous"
+      delete: "Supprimer"
+      deleted_patient: "Patient supprimé"
+      back_to_appointments: "Retour aux rendez-vous"
+    index:
+      title: "Tous mes rendez-vous"
+      today: "Aujourd'hui"
+      start_date: "Date de début"
+      end_date: "Date de fin"
+      submit: "Soumettre"
+      distance: "Distance"
+      appointments: "Rendez-vous"
+      during_this_period: "Pendant cette période, tu as parcouru"
+      distance_and_duration: "%{distance} km & %{duration} minutes"
+      for_appointments: "pour %{count} rendez-vous"
+      appointments_amount: "Total : %{count} rendez-vous"
+      deleted_patient: "Patient supprimé"
+      minutes: "minutes"
