--- a/config/locales/views/appointments/it.yml
+++ b/config/locales/views/appointments/it.yml
@@ -1,35 +1,40 @@
 it:
   appointments:
-    title: "Appuntamenti il %{date}"
-    new_appointment: "Nuovo appuntamento"
-    calculate_distance_time: "Calcola distanza e tempo"
-    today_you_drove: "Oggi hai guidato"
-    driving_distance: "%{driving_distance} km"
-    driving_duration: "%{driving_duration} minutes"
-    distance_and_duration: "%{distance} km & %{duration} minuti"
-    click_to_calculate_distance: "Clicca per calcolare distanza e tempo"
-    new_appointment: "Stai creando un nuovo appuntamento"
-    select_patient: "Seleziona paziente"
-    start_time: "Ora d'inizio"
-    end_time: "Ora di fine"
-    submit: "Convalida e salva"
-    back_to_appointments: "Torna agli appuntamenti"
-    back_to_appointments: "Torna agli appuntamenti"
-    delete_appointment: "Elimina questo appuntamento"
-    delete: "Elimina"
-    deleted_patient: "Paziente cancellato"
-    arrived_at: "Arrivo alle %{time}"
-    left_at: "Partenza alle %{time}"
-    title: "Tutti gli appuntamenti"
-    today: "Oggi"
-    start_date: "Data di inizio"
-    end_date: "Data di fine"
-    submit: "Invia"
-    distance: "Distanza"
-    appointments: "Appuntamenti"
-    during_this_period: "Durante questo periodo, hai percorso"
-    distance_and_duration: "%{distance} km e %{duration} minuti"
-    for_appointments: "per %{count} appuntamenti"
-    appointments_amount: "Totale: %{count} appuntamenti"
-    deleted_patient: "Paziente cancellato"
-    minutes: "minuti"
+    daily_index:
+      title: "Appuntamenti il %{date}"
+      new_appointment: "Nuovo appuntamento"
+      calculate_distance_time: "Calcola distanza e tempo"
+      today_you_drove: "Oggi hai guidato"
+      driving_distance: "%{driving_distance} km"
+      driving_duration: "%{driving_duration} minutes"
+      distance_and_duration: "%{distance} km & %{duration} minuti"
+      click_to_calculate_distance: "Clicca per calcolare distanza e tempo"
+    new:
+      new_appointment: "Stai creando un nuovo appuntamento"
+      select_patient: "Seleziona paziente"
+      start_time: "Ora d'inizio"
+      end_time: "Ora di fine"
+      submit: "Convalida e salva"
+      back_to_appointments: "Torna agli appuntamenti"
+    appointment:
+      arrived_at: "Arrivo alle %{time}"
+      left_at: "Partenza alle %{time}"
+    show:
+      back_to_appointments: "Torna agli appuntamenti"
+      delete_appointment: "Elimina questo appuntamento"
+      delete: "Elimina"
+      deleted_patient: "Paziente cancellato"
+    index:
+      title: "Tutti gli appuntamenti"
+      today: "Oggi"
+      start_date: "Data di inizio"
+      end_date: "Data di fine"
+      submit: "Invia"
+      distance: "Distanza"
+      appointments: "Appuntamenti"
+      during_this_period: "Durante questo periodo, hai percorso"
+      distance_and_duration: "%{distance} km e %{duration} minuti"
+      for_appointments: "per %{count} appuntamenti"
+      appointments_amount: "Totale: %{count} appuntamenti"
+      deleted_patient: "Paziente cancellato"
+      minutes: "minuti"
