--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -4,9 +4,8 @@ de:
       greeting: "Hallo, %{name}"
       today: "Heute ist %{date}"
       new_appointment: "Neuer Termin"
-      analytics: "Alle Termine"
+      appointments: "Alle Termine"
       patients: "Alle Patienten"
-      tenants: "Alle Organisationen"
       export_data: "Termine exportieren"
       share_feedback: "Mein Kommentar teilen"
       calcometer: "Calcometer"
@@ -27,3 +26,7 @@ de:
       patient_tracker_desc: "Erleben Sie die Leichtigkeit einer Multiplattform-Lösung, die mit Ihnen im Kopf entworfen wurde, und steigern Sie Ihre Effizienz auf neue Höhen."
       mobile_first_approach: "Mobile-First-Ansatz"
       mobile_first_approach_desc: "Ihr Telefon ist ein primäres Werkzeug bei der Arbeit, daher ist Calcometer so konzipiert, dass es mobile first und benutzerfreundlich ist."
+      log_out: "Ausloggen"
+      log_in: "Anmelden"
+      sign_up: "Registrieren"
+      language: "Sprache"
