--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -4,9 +4,8 @@ en:
       greeting: "Hello, %{name}"
       today: "It is %{date}"
       new_appointment: "New appointment"
-      analytics: "All appointments"
+      appointments: "All appointments"
       patients: "Patients"
-      tenants: "Organisations"
       export_data: "Export appointments"
       share_feedback: "Help us improve"
       calcometer: "Calcometer"
@@ -27,3 +26,7 @@ en:
       patient_tracker_desc: "Experience the ease of a multi-platform solution, designed with you in mind, and elevate your efficiency to new heights."
       mobile_first_approach: "Mobile-first approach"
       mobile_first_approach_desc: "Your phone is a primary tool at work, so Calcometer is designed to be mobile first and friendly."
+      log_out: "Log out"
+      log_in: "Log in"
+      sign_up: "Sign up"
+      language: "Language"
