--- a/config/locales/views/pages/fr.yml
+++ b/config/locales/views/pages/fr.yml
@@ -4,9 +4,8 @@ fr:
       greeting: "Bonjour, %{name}"
       today: "C'est le %{date}"
       new_appointment: "Nouveau rendez-vous"
-      analytics: "Mes rendez-vous"
+      appointments: "Mes rendez-vous"
       patients: "Patients"
-      tenants: "Organisations"
       export_data: "Exporter mes rendez-vous"
       share_feedback: "Partager mon avis"
       calcometer: "Calcometer"
@@ -27,3 +26,7 @@ fr:
       patient_tracker_desc: "Découvrez la facilité d'une solution multiplateforme, conçue avec vous à l'esprit, et améliorez votre efficacité à de nouveaux sommets."
       mobile_first_approach: "Approche mobile-first"
       mobile_first_approach_desc: "Votre téléphone est un outil principal au travail, donc Calcometer est conçu pour être mobile first et friendly."
+      log_out: "Se déconnecter"
+      log_in: "Connexion"
+      sign_up: "S'inscrire"
+      language: "Langue"
