--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -4,9 +4,8 @@ it:
       greeting: "Ciao, %{name}"
       today: "Oggi è %{date}"
       new_appointment: "Nuovo appuntamento"
-      analytics: "Tutti appuntamenti"
+      appointments: "Tutti appuntamenti"
       patients: "Pazienti"
-      tenants: "Organizzazioni"
       export_data: "Esportare appuntamenti"
       share_feedback: "Aiutaci a migliorare"
       calcometer: "Calcometer"
@@ -27,3 +26,7 @@ it:
       patient_tracker_desc: "Vivi la facilità di una soluzione multi-piattaforma, progettata pensando a te, e porta la tua efficienza a nuove altezze."
       mobile_first_approach: "Approccio mobile-first"
       mobile_first_approach_desc: "Il tuo telefono è uno strumento principale sul lavoro, quindi Calcometer è progettato per essere mobile first e friendly."
+      log_out: "Disconnetti"
+      log_in: "Accedi"
+      sign_up: "Iscriviti"
+      language: "Lingua"
