--- a/config/locales/views/appointments/it.yml
+++ b/config/locales/views/appointments/it.yml
@@ -6,7 +6,7 @@ it:
       calculate_distance_time: "Calcola distanza e tempo"
       today_you_drove: "Oggi hai guidato"
       driving_distance: "%{driving_distance} km"
-      driving_duration: "%{driving_duration} minutes"
+      driving_duration: "%{driving_duration} minuti"
       distance_and_duration: "%{distance} km & %{duration} minuti"
       click_to_calculate_distance: "Clicca per calcolare distanza e tempo"
     new:
