--- a/config/locales/devise.views.en.yml
+++ b/config/locales/devise.views.en.yml
@@ -100,6 +100,7 @@ en:
         cancel_my_account: Cancel my account
         currently_waiting_confirmation_for_email: 'Currently waiting confirmation for: %{email}'
         leave_blank_if_you_don_t_want_to_change_it: Leave blank if you don't want to change it
+        input_your_password_to_confirm_the_changes: Input your password to confirm the changes
         title: Edit my account
         unhappy: Unhappy?
         update: Update
@@ -107,6 +108,7 @@ en:
         select_time_zone: Select your time zone
         select_language: Select your language
         language: '%{selected_language}'
+        password_hint: Leave blank if you don't want to change it
         confirm_delete: Are you sure?
         delete_account: Be careful, the following action is not reverisble. If you decide to delete your account, we will not be able to recover it and you will lose all your data.
         delete_account_button: Delete account
