--- a/config/locales/devise.views.fr.yml
+++ b/config/locales/devise.views.fr.yml
@@ -97,7 +97,8 @@ fr:
         are_you_sure: Êtes-vous sûr ?
         cancel_my_account: Supprimer mon compte
         currently_waiting_confirmation_for_email: 'Confirmation en attente pour: %{email}'
-        leave_blank_if_you_don_t_want_to_change_it: laissez ce champ vide pour le laisser inchangé
+        leave_blank_if_you_don_t_want_to_change_it: Laissez ce champ vide pour le laisser inchangé
+        input_your_password_to_confirm_the_changes: Entrez le mot de passe pour confirmer les changements
         title: Modifier mon compte
         unhappy: Pas content ?
         update: Modifier
