--- a/config/locales/views/shared/navbar.fr.yml
+++ b/config/locales/views/shared/navbar.fr.yml
@@ -1,7 +1,7 @@
 fr:
   shared:
     navbar:
-      home: "Salut %{username}"
+      home: "Calcometer"
       menu: "Menu"
       new_appointment: "Nouveau rendez-vous"
       appointments: "Mes rendez-vous"
