--- a/config/locales/views/shared/navbar.en.yml
+++ b/config/locales/views/shared/navbar.en.yml
@@ -1,7 +1,7 @@
 en:
   shared:
     navbar:
-      home: "Calcometer"
+      home: "Calcometer DEMO"
       menu: "Menu"
       new_appointment: "New appointment"
       appointments: "All appointments"
