--- a/config/locales/views/shared/navbar.it.yml
+++ b/config/locales/views/shared/navbar.it.yml
@@ -1,7 +1,7 @@
 it:
   shared:
     navbar:
-      home: "Calcometer"
+      home: "Calcometer DEMO"
       menu: "Menu"
       new_appointment: "Nuovo appuntamento"
       appointments: "Tutti appuntamenti"
