--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -4,7 +4,7 @@ de:
       greeting: "Hallo, %{name}"
       today: "Heute ist %{date}"
       new_appointment: "Neuer Termin"
-      appointments: "Alle Termine"
+      appointments: "Termine"
       patients: "Alle Patienten"
       export_data: "Termine exportieren"
       share_feedback: "Mein Kommentar teilen"
@@ -14,18 +14,18 @@ de:
       sign_in: "Einloggen"
       calcometer_screenshot: "Screenshot der Calcometer-Homepage"
       why_calcometer: "Warum Calcometer?"
-      distance_management: "Entfernungsmanagement"
-      distance_management_desc: "Mühelose automatische Entfernungs- und Zeitberechnungen zwischen Patienten oder Organisationen."
+      distance_management: "Automatisches Entfernungsmanagement"
+      distance_management_desc: "Automatische Berechnung von Entfernung und Zeit zwischen Patienten oder Kunden."
       safe_by_design: "Sicher durch Design"
-      safe_by_design_desc: "Ihre Daten sind sicher verschlüsselt und sorgfältig geschützt."
-      clutter_free_design: "Aufgeräumtes Design"
-      clutter_free_design_desc: "Intuitive und benutzerfreundliche Oberfläche für ein angenehmes Erlebnis."
-      peace_of_mind: "Ruhe"
-      peace_of_mind_desc: "Vereinfachen Sie Ihre Routinen, während Sie Ihre täglichen Aufgaben erledigen."
-      patient_tracker: "Patientenverfolgung"
-      patient_tracker_desc: "Erleben Sie die Leichtigkeit einer Multiplattform-Lösung, die mit Ihnen im Kopf entworfen wurde, und steigern Sie Ihre Effizienz auf neue Höhen."
-      mobile_first_approach: "Mobile-First-Ansatz"
-      mobile_first_approach_desc: "Ihr Telefon ist ein primäres Werkzeug bei der Arbeit, daher ist Calcometer so konzipiert, dass es mobile first und benutzerfreundlich ist."
+      safe_by_design_desc: "Ihre Daten sind verschlüsselt und die Daten liegen auf sicheren Servern."
+      clutter_free_design: "Minimalistisches Design"
+      clutter_free_design_desc: "Intuitive und vertraute Benutzeroberfläche für ein angenehmes Erlebnis."
+      peace_of_mind: "Minimaler Aufwand"
+      peace_of_mind_desc: "In nur wenigen Schritten können Sie Ihre Termine, Entfernungen und Fahrtzeiten verwalten."
+      patient_tracker: "Patiententracker"
+      patient_tracker_desc: "Eine plattformübergreifende Lösung, mit der Sie Ihre Patienten und die Zeit, die Sie mit ihnen verbringen, verwalten können."
+      mobile_first_approach: "Mobile-first-Ansatz"
+      mobile_first_approach_desc: "Die App ist für die Nutzung auf Smartphones optimiert, als Hauptinstrument bei der Arbeit."
       log_out: "Ausloggen"
       log_in: "Anmelden"
       sign_up: "Registrieren"
