--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -4,7 +4,7 @@ en:
       greeting: "Hello, %{name}"
       today: "It is %{date}"
       new_appointment: "New appointment"
-      appointments: "All appointments"
+      appointments: "Appointments"
       patients: "Patients"
       export_data: "Export appointments"
       share_feedback: "Help us improve"
@@ -14,18 +14,18 @@ en:
       sign_in: "Sign In"
       calcometer_screenshot: "Calcometer homepage screenshot"
       why_calcometer: "Why Calcometer?"
-      distance_management: "Distance management"
-      distance_management_desc: "Effortless automatic distance and time calculations between patients or customers."
+      distance_management: "Automatic distance management"
+      distance_management_desc: "Automatic calculation of distance and time between patients or clients automatically."
       safe_by_design: "Safe by design"
-      safe_by_design_desc: "Your data is securely encrypted and meticulously protected."
-      clutter_free_design: "Clutter-free design"
-      clutter_free_design_desc: "Intuitive and user-friendly interface for a pleasing experience."
-      peace_of_mind: "Peace of mind"
-      peace_of_mind_desc: "Simplify your routines as you navigate your daily tasks."
+      safe_by_design_desc: "Your data is encrypted and data is on secure servers."
+      clutter_free_design: "Minimalist design"
+      clutter_free_design_desc: "Intuitive and familiar interface for a pleasant experience."
+      peace_of_mind: "Minimal effort"
+      peace_of_mind_desc: "In just a few steps, you can manage your appointments, distances, and travel times."
       patient_tracker: "Patient tracker"
-      patient_tracker_desc: "Experience the ease of a multi-platform solution, designed with you in mind, and elevate your efficiency to new heights."
+      patient_tracker_desc: "A cross-platform solution where you can manage your patients and time spent with them."
       mobile_first_approach: "Mobile-first approach"
-      mobile_first_approach_desc: "Your phone is a primary tool at work, so Calcometer is designed to be mobile first and friendly."
+      mobile_first_approach_desc: "The app is optimized for use on smartphones, as the main tool at work."
       log_out: "Log out"
       log_in: "Log in"
       sign_up: "Sign up"
