--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -4,7 +4,7 @@ it:
       greeting: "Ciao, %{name}"
       today: "Oggi è %{date}"
       new_appointment: "Nuovo appuntamento"
-      appointments: "Tutti appuntamenti"
+      appointments: "Appuntamenti"
       patients: "Pazienti"
       export_data: "Esportare appuntamenti"
       share_feedback: "Aiutaci a migliorare"
@@ -14,18 +14,18 @@ it:
       sign_in: "Accedi"
       calcometer_screenshot: "Screenshot della homepage di Calcometer"
       why_calcometer: "Perché Calcometer?"
-      distance_management: "Gestione delle distanze"
-      distance_management_desc: "Calcoli automatici di distanza e tempo tra pazienti o organizzazioni senza sforzo."
+      distance_management: "Gestione automatica delle distanze"
+      distance_management_desc: "Calcolo automatico di distanza e tempo tra pazienti o clienti in modo automatico."
       safe_by_design: "Sicuro per progettazione"
-      safe_by_design_desc: "I tuoi dati sono criptati in modo sicuro e protetti meticolosamente."
-      clutter_free_design: "Design essenziale"
+      safe_by_design_desc: "I tuoi dati sono criptati e i dati sono su server sicuri."
+      clutter_free_design: "Design minimalista"
       clutter_free_design_desc: "Interfaccia intuitiva e familiare per un'esperienza piacevole."
-      peace_of_mind: "Tranquillità"
-      peace_of_mind_desc: "Semplifica le tue routine mentre navighi nelle tue attività quotidiane."
-      patient_tracker: "Tracker pazienti"
-      patient_tracker_desc: "Vivi la facilità di una soluzione multi-piattaforma, progettata pensando a te, e porta la tua efficienza a nuove altezze."
+      peace_of_mind: "Minimo sforzo"
+      peace_of_mind_desc: "In pochi passi, puoi gestire i tuoi appuntamenti, distanze e tempi di percorrenza."
+      patient_tracker: "Tracker dei pazienti"
+      patient_tracker_desc: "Una soluzione multi-piattaforma dove gestire i tuoi pazienti e il tempo passato con loro."
       mobile_first_approach: "Approccio mobile-first"
-      mobile_first_approach_desc: "Il tuo telefono è uno strumento principale sul lavoro, quindi Calcometer è progettato per essere mobile first e friendly."
+      mobile_first_approach_desc: "L'app é ottimizzata per uso su smartphone, in quanto strumento principale sul lavoro."
       log_out: "Disconnetti"
       log_in: "Accedi"
       sign_up: "Iscriviti"
