--- a/config/locales/views/appointments/fr.yml
+++ b/config/locales/views/appointments/fr.yml
@@ -8,7 +8,7 @@ fr:
       driving_distance: "%{driving_distance} km"
       driving_duration: "%{driving_duration} minutes"
       distance_and_duration: "%{distance} km & %{duration} minutes"
-      click_to_calculate_distance: "Cliquez pour calculer la distance et le temps"
+      click_to_calculate_distance: "Calculer distance et temps"
     new:
       new_appointment: "Vous créez un nouveau rendez-vous"
       select_patient: "Sélectionnez le patient"
