--- a/config/locales/views/pages/fr.yml
+++ b/config/locales/views/pages/fr.yml
@@ -13,19 +13,19 @@ fr:
       sign_up: "S'inscrire"
       sign_in: "Se connecter"
       calcometer_screenshot: "Capture d'écran de la page d'accueil de Calcometer"
-      why_calcometer: "Pourquoi Calcometer?"
-      distance_management: "Gestion des distances"
-      distance_management_desc: "Calculs automatiques de distance et de temps entre les patients ou les clients sans effort."
-      safe_by_design: "Sûr par conception"
-      safe_by_design_desc: "Vos données sont sécurisées par cryptage et protégées avec soin."
-      clutter_free_design: "Design simplifié"
-      clutter_free_design_desc: "Interface intuitive et conviviale pour une expérience agréable."
-      peace_of_mind: "Tranquillité d'esprit"
-      peace_of_mind_desc: "Simplifiez vos routines pendant que vous naviguez dans vos tâches quotidiennes."
-      patient_tracker: "Suivi des patients"
-      patient_tracker_desc: "Découvrez la facilité d'une solution multiplateforme, conçue avec vous à l'esprit, et améliorez votre efficacité à de nouveaux sommets."
-      mobile_first_approach: "Approche mobile-first"
-      mobile_first_approach_desc: "Votre téléphone est un outil principal au travail, donc Calcometer est conçu pour être mobile first et friendly."
+      why_calcometer : "Pourquoi Calcometer ?"
+      distance_management : "Gestion automatique de la distance"
+      distance_management_desc : "Calcul automatique de la distance et du temps entre les patients ou les clients."
+      safe_by_design : "Sécurité dès la conception."
+      safe_by_design_desc : "Vos données sont cryptées et se trouvent sur des serveurs sécurisés."
+      clutter_free_design : "Conception minimaliste"
+      clutter_free_design_desc : "Interface intuitive et familière pour une expérience agréable."
+      peace_of_mind : "Effort minimal"
+      peace_of_mind_desc : "En quelques étapes, vous pouvez gérer vos rendez-vous, les distances et les temps de trajet."
+      patient_tracker : "Suivi des patients"
+      patient_tracker_desc : "Une solution multiplateforme où vous pouvez gérer vos patients et le temps passé avec eux."
+      mobile_first_approach : "Approche mobile-first"
+      mobile_first_approach_desc : "L'application est optimisée pour une utilisation sur smartphone, en tant qu'outil principal au travail."
       log_out: "Se déconnecter"
       log_in: "Connexion"
       sign_up: "S'inscrire"
