add username in navbar

--- a/config/locales/views/shared/navbar.de.yml
+++ b/config/locales/views/shared/navbar.de.yml
@@ -4,9 +4,9 @@ de:
       home: "Calcometer DEMO"
       menu: "Menü"
       new_appointment: "Neue Termin"
-      appointments: "Alle Termine"
+      appointments: "Termine"
       patients: "Patienten"
-      my_account: "Mein Konto"
+      my_account: "%{name}"
       edit_profile: "Konto bearbeiten"
       log_out: "Ausloggen"
       log_in: "Anmelden"
