--- a/config/locales/views/shared/navbar.en.yml
+++ b/config/locales/views/shared/navbar.en.yml
@@ -4,9 +4,9 @@ en:
       home: "Calcometer DEMO"
       menu: "Menu"
       new_appointment: "New appointment"
-      appointments: "All appointments"
+      appointments: "Appointments"
       patients: "Patients"
-      my_account: "My account"
+      my_account: "%{name}"
       edit_profile: "Edit account"
       log_out: "Log out"
       log_in: "Log in"
