--- a/config/locales/views/shared/navbar.it.yml
+++ b/config/locales/views/shared/navbar.it.yml
@@ -4,9 +4,9 @@ it:
       home: "Calcometer DEMO"
       menu: "Menu"
       new_appointment: "Nuovo appuntamento"
-      appointments: "Tutti appuntamenti"
+      appointments: "Appuntamenti"
       patients: "Pazienti"
-      my_account: "Profilo"
+      my_account: "%{name}"
       edit_profile: "Modifica profilo"
       log_out: "Disconnetti"
       log_in: "Accedi"
