not signed_in homepage restyling

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -9,7 +9,8 @@ de:
       export_data: "Termine exportieren"
       share_feedback: "Mein Kommentar teilen"
       calcometer: "Calcometer"
-      manage_ease: "Verwalten Sie mit Leichtigkeit Ihre Reiseentfernungen, Zeiten und Terminpläne."
+      tagline: "Termine, Entfernungen und Reisezeiten mit Leichtigkeit."
+      features: "App-Funktionen"
       sign_up: "Anmelden"
       sign_in: "Einloggen"
       calcometer_screenshot: "Screenshot der Calcometer-Homepage"
@@ -17,7 +18,7 @@ de:
       distance_management: "Automatisches Entfernungsmanagement"
       distance_management_desc: "Automatische Berechnung von Entfernung und Zeit zwischen Patienten oder Kunden."
       safe_by_design: "Sicher durch Design"
-      safe_by_design_desc: "Ihre Daten sind verschlüsselt und die Daten liegen auf sicheren Servern."
+      safe_by_design_desc: "Ihre Daten werden verschlüsselt und sicher in der Cloud gespeichert."
       clutter_free_design: "Minimalistisches Design"
       clutter_free_design_desc: "Intuitive und vertraute Benutzeroberfläche für ein angenehmes Erlebnis."
       peace_of_mind: "Minimaler Aufwand"
