--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -9,7 +9,8 @@ en:
       export_data: "Export appointments"
       share_feedback: "Help us improve"
       calcometer: "Calcometer"
-      manage_ease: "Manage with ease your travel distances, times, and appointment schedules."
+      tagline: "Appointments, distances and travel time management just got easier."
+      features: "Features"
       sign_up: "Sign Up"
       sign_in: "Sign In"
       calcometer_screenshot: "Calcometer homepage screenshot"
@@ -17,7 +18,7 @@ en:
       distance_management: "Automatic distance management"
       distance_management_desc: "Automatic calculation of distance and time between patients or clients automatically."
       safe_by_design: "Safe by design"
-      safe_by_design_desc: "Your data is encrypted and data is on secure servers."
+      safe_by_design_desc: "Your data is encrypted and stored safely in the cloud."
       clutter_free_design: "Minimalist design"
       clutter_free_design_desc: "Intuitive and familiar interface for a pleasant experience."
       peace_of_mind: "Minimal effort"
