--- a/config/locales/views/pages/fr.yml
+++ b/config/locales/views/pages/fr.yml
@@ -9,7 +9,8 @@ fr:
       export_data: "Exporter mes rendez-vous"
       share_feedback: "Partager mon avis"
       calcometer: "Calcometer"
-      manage_ease: "Gérez facilement vos distances de voyage, vos temps et vos horaires de rendez-vous."
+      tagline: "Rendez-vous, distances et temps de trajet en toute simplicité."
+      features: "Fonctionnalités"
       sign_up: "S'inscrire"
       sign_in: "Se connecter"
       calcometer_screenshot: "Capture d'écran de la page d'accueil de Calcometer"
@@ -17,7 +18,7 @@ fr:
       distance_management : "Gestion automatique de la distance"
       distance_management_desc : "Calcul automatique de la distance et du temps entre les patients ou les clients."
       safe_by_design : "Sécurité dès la conception."
-      safe_by_design_desc : "Vos données sont cryptées et se trouvent sur des serveurs sécurisés."
+      safe_by_design_desc : "Vos données sont cryptées et stockées en toute sécurité dans le cloud."
       clutter_free_design : "Conception minimaliste"
       clutter_free_design_desc : "Interface intuitive et familière pour une expérience agréable."
       peace_of_mind : "Effort minimal"
