--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -9,15 +9,16 @@ it:
       export_data: "Esportare appuntamenti"
       share_feedback: "Aiutaci a migliorare"
       calcometer: "Calcometer"
-      manage_ease: "Gestisci con facilità le tue distanze di viaggio, i tempi e gli appuntamenti."
+      tagline: "Appuntamenti, distanze e tempi di percorrenza con facilità."
+      features: "Funzionalità"
       sign_up: "Iscriviti"
       sign_in: "Accedi"
       calcometer_screenshot: "Screenshot della homepage di Calcometer"
       why_calcometer: "Perché Calcometer?"
       distance_management: "Gestione automatica delle distanze"
       distance_management_desc: "Calcolo automatico di distanza e tempo tra pazienti o clienti in modo automatico."
-      safe_by_design: "Sicuro per progettazione"
-      safe_by_design_desc: "I tuoi dati sono criptati e i dati sono su server sicuri."
+      safe_by_design: "Sicuro di design"
+      safe_by_design_desc: "I tuoi dati sono crittografati e archiviati in modo sicuro nel cloud."
       clutter_free_design: "Design minimalista"
       clutter_free_design_desc: "Interfaccia intuitiva e familiare per un'esperienza piacevole."
       peace_of_mind: "Minimo sforzo"
